--- a/book.bib
+++ b/book.bib
@@ -424,6 +424,55 @@ booktitle = "Ambulatory Assessment. Computer assisted psychological and psychoph
 publisher = "Hogrefe & Huber",
 }
 
+@article{Goertz2018,
+457
+ 
+abstract = {INTRODUCTION Fatigue is the second most common symptom in patients with chronic obstructive pulmonary disease (COPD). Despite its high prevalence, fatigue is often ignored in daily practice. For this reason, little is known about the underlying determinants of fatigue in patients with COPD. The primary objectives of this study are to chart the course of fatigue in patients with COPD, to identify the physical, systemic, psychological and behavioural factors that precipitate and perpetuate fatigue in patients with COPD, to evaluate the impact of exacerbation-related hospitalisations on fatigue and to better understand the association between fatigue and 2-year all-cause hospitalisation and mortality in patients with COPD. The secondary aim is to identify diurnal differences in fatigue by using ecological momentary assessment (EMA). This manuscript describes the protocol of the FAntasTIGUE study and gives an overview of the possible strengths, weaknesses and clinical implications. METHODS AND ANALYSIS A 2-year longitudinal, observational study, enrolling 400 patients with clinically stable COPD has been designed. Fatigue, the primary outcome, will be measured by the subjective fatigue subscale of the Checklist Individual Strength (CIS-Fatigue). The secondary outcome is the day-to-day/diurnal fatigue, registered in a subsample (n=60) by EMA. CIS-Fatigue and EMA will be evaluated at baseline, and at 4, 8 and 12 months. The precipitating and perpetuating factors of fatigue (physical, psychological, behavioural and systemic) will be assessed at baseline and at 12 months. Additional assessments will be conducted following hospitalisation due to an exacerbation of COPD that occurs between baseline and 12 months. Finally, at 18 and 24 months the participants will be followed up on their fatigue, number of exacerbations, exacerbation-related hospitalisation and survival. ETHICS AND DISSEMINATION This protocol was approved by the Medical research Ethics Committees United, Nieuwegein, the Netherlands (NL60484.100.17). TRIAL REGISTRATION NUMBER NTR6933; Pre-results.},
+458
+ 
+author = {Go{\"{e}}rtz, Yvonne M J and Looijmans, Milou and Prins, Judith B and Janssen, Daisy J A and Thong, Melissa S Y and Peters, Jeannette B and Burtin, Chris and Meertens-Kerris, Yvonne and Coors, Arnold and Muris, Jean W M and Sprangers, Mirjam A G and Wouters, Emiel F M and Vercoulen, Jan H and Spruit, Martijn A},
+459
+ 
+doi = {10.1136/bmjopen-2018-021745},
+460
+ 
+file = {:Users/lckooistra/Google Drive/New Literature/Mendeley/Go{\"{e}}rtz{\_}2018.pdf:pdf},
+461
+ 
+isbn = {2018021745},
+462
+ 
+issn = {2044-6055},
+463
+ 
+journal = {BMJ Open},
+464
+ 
+keywords = {chronic obstructive pulmonary disease,fatigue,underlying factors},
+465
+ 
+number = {4},
+466
+ 
+pages = {e021745},
+467
+ 
+pmid = {29643168},
+468
+ 
+title = {{Fatigue in patients with chronic obstructive pulmonary disease: protocol of the Dutch multicentre, longitudinal, observational {\textless}i{\textgreater}FAntasTIGUE{\textless}/i{\textgreater} study}},
+469
+ 
+url = {http://www.ncbi.nlm.nih.gov/pubmed/29643168{\%}0Ahttp://www.pubmedcentral.nih.gov/articlerender.fcgi?artid=PMC5898336{\%}0Ahttp://bmjopen.bmj.com/lookup/doi/10.1136/bmjopen-2018-021745},
+470
+ 
+volume = {8},
+471
+ 
+year = {2018}
+472
+ 
+}
 
 @Article{Green2016,
     title = {simr: an R package for power analysis of generalised linear mixed models by simulation},
@@ -452,25 +501,6 @@ publisher = "Hogrefe & Huber",
   keywords = {Depression,diagnosis,self-help devices,self-help groups},
   pmid     = {20636115},
 }
-
-@article{Goertz2018,
-abstract = {INTRODUCTION Fatigue is the second most common symptom in patients with chronic obstructive pulmonary disease (COPD). Despite its high prevalence, fatigue is often ignored in daily practice. For this reason, little is known about the underlying determinants of fatigue in patients with COPD. The primary objectives of this study are to chart the course of fatigue in patients with COPD, to identify the physical, systemic, psychological and behavioural factors that precipitate and perpetuate fatigue in patients with COPD, to evaluate the impact of exacerbation-related hospitalisations on fatigue and to better understand the association between fatigue and 2-year all-cause hospitalisation and mortality in patients with COPD. The secondary aim is to identify diurnal differences in fatigue by using ecological momentary assessment (EMA). This manuscript describes the protocol of the FAntasTIGUE study and gives an overview of the possible strengths, weaknesses and clinical implications. METHODS AND ANALYSIS A 2-year longitudinal, observational study, enrolling 400 patients with clinically stable COPD has been designed. Fatigue, the primary outcome, will be measured by the subjective fatigue subscale of the Checklist Individual Strength (CIS-Fatigue). The secondary outcome is the day-to-day/diurnal fatigue, registered in a subsample (n=60) by EMA. CIS-Fatigue and EMA will be evaluated at baseline, and at 4, 8 and 12 months. The precipitating and perpetuating factors of fatigue (physical, psychological, behavioural and systemic) will be assessed at baseline and at 12 months. Additional assessments will be conducted following hospitalisation due to an exacerbation of COPD that occurs between baseline and 12 months. Finally, at 18 and 24 months the participants will be followed up on their fatigue, number of exacerbations, exacerbation-related hospitalisation and survival. ETHICS AND DISSEMINATION This protocol was approved by the Medical research Ethics Committees United, Nieuwegein, the Netherlands (NL60484.100.17). TRIAL REGISTRATION NUMBER NTR6933; Pre-results.},
-author = {Go{\"{e}}rtz, Yvonne M J and Looijmans, Milou and Prins, Judith B and Janssen, Daisy J A and Thong, Melissa S Y and Peters, Jeannette B and Burtin, Chris and Meertens-Kerris, Yvonne and Coors, Arnold and Muris, Jean W M and Sprangers, Mirjam A G and Wouters, Emiel F M and Vercoulen, Jan H and Spruit, Martijn A},
-doi = {10.1136/bmjopen-2018-021745},
-file = {:Users/lckooistra/Google Drive/New Literature/Mendeley/Go{\"{e}}rtz{\_}2018.pdf:pdf},
-isbn = {2018021745},
-issn = {2044-6055},
-journal = {BMJ Open},
-keywords = {chronic obstructive pulmonary disease,fatigue,underlying factors},
-number = {4},
-pages = {e021745},
-pmid = {29643168},
-title = {{Fatigue in patients with chronic obstructive pulmonary disease: protocol of the Dutch multicentre, longitudinal, observational {\textless}i{\textgreater}FAntasTIGUE{\textless}/i{\textgreater} study}},
-url = {http://www.ncbi.nlm.nih.gov/pubmed/29643168{\%}0Ahttp://www.pubmedcentral.nih.gov/articlerender.fcgi?artid=PMC5898336{\%}0Ahttp://bmjopen.bmj.com/lookup/doi/10.1136/bmjopen-2018-021745},
-volume = {8},
-year = {2018}
-}
-
 
 @Article{HaedtMatt2011,
   author        = {Haedt-Matt, Alissa A. and Keel, Pamela K.},
@@ -697,6 +727,24 @@ year = {1999}
   keywords = {Daily life,Emotions,Experience Sampling Method (ESM),Hallucinations,Phenomenology},
   pmid     = {22784687},
 }
+
+@article{Penninx2008,
+abstract = {The Netherlands Study of Depression and Anxiety (NESDA) is a multi-site naturalistic cohort study to: (1) describe the long-term course and consequences of depressive and anxiety disorders, and (2) to integrate biological and psychosocial research paradigms within an epidemiological approach in order to examine (interaction between) predictors of the long-term course and consequences. Its design is an eight-year longitudinal cohort study among 2981 participants aged 18 through 65 years. The sample consists of 1701 persons with a current (six-month recency) diagnosis of depression and/or anxiety disorder, 907 persons with life-time diagnoses or at risk because of a family history or subthreshold depressive or anxiety symptoms, and 373 healthy controls. Recruitment took place in the general population, in general practices (through a three-stage screening procedure), and in mental health organizations in order to recruit persons reflecting various settings and developmental stages of psychopathology. During a four-hour baseline assessment including written questionnaires, interviews, a medical examination, a cognitive computer task and collection of blood and saliva samples, extensive information was gathered about key (mental) health outcomes and demographic, psychosocial, clinical, biological and genetic determinants. Detailed assessments will be repeated after one, two, four and eight years of follow-up. The findings of NESDA are expected to provide more detailed insight into (predictors of) the long-term course of depressive and anxiety disorders in adults. Besides its scientific relevance, this may contribute to more effective prevention and treatment of depressive and anxiety disorders.},
+author = {Penninx, Brenda W J H and Beekman, Aartjan T F and Smit, Johannes H. and Zitman, Frans G. and Nolen, Willem A. and Spinhoven, Philip and Cuijpers, Pim and de Jong, Peter J. and van Marwijk, Harm W J and Assendelft, Willem J J and van der Meer, Klaas and Verhaak, Peter and Wensing, Michel and de Graaf, Ron and Hoogendijk, Witte J. and Ormel, Johan and van Dyck, Richard and {NESDA Research Consortium}},
+doi = {10.1002/mpr.256},
+file = {:Users/lckooistra/Documents/Werk/VU/Artikelen Mendeley/Penninx{\_}IntJMethPsychiatrRes{\_}2008.pdf:pdf},
+issn = {1049-8931},
+journal = {International journal of methods in psychiatric research},
+month = {sep},
+number = {3},
+pages = {121--40},
+pmid = {18763692},
+title = {{The Netherlands Study of Depression and Anxiety (NESDA): rationale, objectives and methods.}},
+url = {http://doi.wiley.com/10.1002/mpr.256 http://www.ncbi.nlm.nih.gov/pubmed/18763692},
+volume = {17},
+year = {2008}
+}
+
 
 @Article{Piasecki2007,
   author   = {Piasecki, Thomas M. and Hufford, Michael R. and Solhan, Marika and Trull, Timothy J.},
