--- a/book.bib
+++ b/book.bib
@@ -141,7 +141,8 @@
   doi = {10.1007/978-94-017-9088-8_3},
   isbn = {9789401790888},
   issn = {0022-3018},
-  mendeley-groups = {Methodology/Psychometrics},
+  publisher = {Springer Netherlands},
+  location = {Dordrecht},
   pages = {35--54},
   pmid = {3655778},
   title = {{Validity and reliability of the experience-sampling method}},
@@ -425,53 +426,19 @@ publisher = "Hogrefe & Huber",
 }
 
 @article{Goertz2018,
-457
- 
-abstract = {INTRODUCTION Fatigue is the second most common symptom in patients with chronic obstructive pulmonary disease (COPD). Despite its high prevalence, fatigue is often ignored in daily practice. For this reason, little is known about the underlying determinants of fatigue in patients with COPD. The primary objectives of this study are to chart the course of fatigue in patients with COPD, to identify the physical, systemic, psychological and behavioural factors that precipitate and perpetuate fatigue in patients with COPD, to evaluate the impact of exacerbation-related hospitalisations on fatigue and to better understand the association between fatigue and 2-year all-cause hospitalisation and mortality in patients with COPD. The secondary aim is to identify diurnal differences in fatigue by using ecological momentary assessment (EMA). This manuscript describes the protocol of the FAntasTIGUE study and gives an overview of the possible strengths, weaknesses and clinical implications. METHODS AND ANALYSIS A 2-year longitudinal, observational study, enrolling 400 patients with clinically stable COPD has been designed. Fatigue, the primary outcome, will be measured by the subjective fatigue subscale of the Checklist Individual Strength (CIS-Fatigue). The secondary outcome is the day-to-day/diurnal fatigue, registered in a subsample (n=60) by EMA. CIS-Fatigue and EMA will be evaluated at baseline, and at 4, 8 and 12 months. The precipitating and perpetuating factors of fatigue (physical, psychological, behavioural and systemic) will be assessed at baseline and at 12 months. Additional assessments will be conducted following hospitalisation due to an exacerbation of COPD that occurs between baseline and 12 months. Finally, at 18 and 24 months the participants will be followed up on their fatigue, number of exacerbations, exacerbation-related hospitalisation and survival. ETHICS AND DISSEMINATION This protocol was approved by the Medical research Ethics Committees United, Nieuwegein, the Netherlands (NL60484.100.17). TRIAL REGISTRATION NUMBER NTR6933; Pre-results.},
-458
- 
-author = {Go{\"{e}}rtz, Yvonne M J and Looijmans, Milou and Prins, Judith B and Janssen, Daisy J A and Thong, Melissa S Y and Peters, Jeannette B and Burtin, Chris and Meertens-Kerris, Yvonne and Coors, Arnold and Muris, Jean W M and Sprangers, Mirjam A G and Wouters, Emiel F M and Vercoulen, Jan H and Spruit, Martijn A},
-459
- 
-doi = {10.1136/bmjopen-2018-021745},
-460
- 
-file = {:Users/lckooistra/Google Drive/New Literature/Mendeley/Go{\"{e}}rtz{\_}2018.pdf:pdf},
-461
- 
-isbn = {2018021745},
-462
- 
-issn = {2044-6055},
-463
- 
-journal = {BMJ Open},
-464
- 
-keywords = {chronic obstructive pulmonary disease,fatigue,underlying factors},
-465
- 
-number = {4},
-466
- 
-pages = {e021745},
-467
- 
-pmid = {29643168},
-468
- 
-title = {{Fatigue in patients with chronic obstructive pulmonary disease: protocol of the Dutch multicentre, longitudinal, observational {\textless}i{\textgreater}FAntasTIGUE{\textless}/i{\textgreater} study}},
-469
- 
-url = {http://www.ncbi.nlm.nih.gov/pubmed/29643168{\%}0Ahttp://www.pubmedcentral.nih.gov/articlerender.fcgi?artid=PMC5898336{\%}0Ahttp://bmjopen.bmj.com/lookup/doi/10.1136/bmjopen-2018-021745},
-470
- 
-volume = {8},
-471
- 
-year = {2018}
-472
- 
+  author = {Go{\"{e}}rtz, Yvonne M J and Looijmans, Milou and Prins, Judith B and Janssen,   Daisy J A and Thong, Melissa S Y and Peters, Jeannette B and Burtin, Chris and Meertens-Kerris, Yvonne and Coors, Arnold and Muris, Jean W M and Sprangers, Mirjam A G and Wouters, Emiel F M and Vercoulen, Jan H and Spruit, Martijn A},
+  doi = {10.1136/bmjopen-2018-021745},
+  isbn = {2018021745},
+  issn = {2044-6055},
+  journal = {BMJ Open},
+  keywords = {chronic obstructive pulmonary disease,fatigue,underlying factors},
+  number = {4},
+  pages = {e021745},
+  pmid = {29643168},
+  title = {{Fatigue in patients with chronic obstructive pulmonary disease: protocol of the Dutch multicentre, longitudinal, observational {\textless}i{\textgreater}FAntasTIGUE{\textless}/i{\textgreater} study}},
+  url = {http://www.ncbi.nlm.nih.gov/pubmed/29643168{\%}0Ahttp://www.pubmedcentral.nih.gov/articlerender.fcgi?artid=PMC5898336{\%}0Ahttp://bmjopen.bmj.com/lookup/doi/10.1136/bmjopen-2018-021745},
+  volume = {8},
+  year = {2018}
 }
 
 @Article{Green2016,
@@ -729,20 +696,18 @@ year = {1999}
 }
 
 @article{Penninx2008,
-abstract = {The Netherlands Study of Depression and Anxiety (NESDA) is a multi-site naturalistic cohort study to: (1) describe the long-term course and consequences of depressive and anxiety disorders, and (2) to integrate biological and psychosocial research paradigms within an epidemiological approach in order to examine (interaction between) predictors of the long-term course and consequences. Its design is an eight-year longitudinal cohort study among 2981 participants aged 18 through 65 years. The sample consists of 1701 persons with a current (six-month recency) diagnosis of depression and/or anxiety disorder, 907 persons with life-time diagnoses or at risk because of a family history or subthreshold depressive or anxiety symptoms, and 373 healthy controls. Recruitment took place in the general population, in general practices (through a three-stage screening procedure), and in mental health organizations in order to recruit persons reflecting various settings and developmental stages of psychopathology. During a four-hour baseline assessment including written questionnaires, interviews, a medical examination, a cognitive computer task and collection of blood and saliva samples, extensive information was gathered about key (mental) health outcomes and demographic, psychosocial, clinical, biological and genetic determinants. Detailed assessments will be repeated after one, two, four and eight years of follow-up. The findings of NESDA are expected to provide more detailed insight into (predictors of) the long-term course of depressive and anxiety disorders in adults. Besides its scientific relevance, this may contribute to more effective prevention and treatment of depressive and anxiety disorders.},
-author = {Penninx, Brenda W J H and Beekman, Aartjan T F and Smit, Johannes H. and Zitman, Frans G. and Nolen, Willem A. and Spinhoven, Philip and Cuijpers, Pim and de Jong, Peter J. and van Marwijk, Harm W J and Assendelft, Willem J J and van der Meer, Klaas and Verhaak, Peter and Wensing, Michel and de Graaf, Ron and Hoogendijk, Witte J. and Ormel, Johan and van Dyck, Richard and {NESDA Research Consortium}},
-doi = {10.1002/mpr.256},
-file = {:Users/lckooistra/Documents/Werk/VU/Artikelen Mendeley/Penninx{\_}IntJMethPsychiatrRes{\_}2008.pdf:pdf},
-issn = {1049-8931},
-journal = {International journal of methods in psychiatric research},
-month = {sep},
-number = {3},
-pages = {121--40},
-pmid = {18763692},
-title = {{The Netherlands Study of Depression and Anxiety (NESDA): rationale, objectives and methods.}},
-url = {http://doi.wiley.com/10.1002/mpr.256 http://www.ncbi.nlm.nih.gov/pubmed/18763692},
-volume = {17},
-year = {2008}
+  author = {Penninx, Brenda W J H and Beekman, Aartjan T F and Smit, Johannes H. and Zitman, Frans G. and Nolen, Willem A. and Spinhoven, Philip and Cuijpers, Pim and de Jong, Peter J. and van Marwijk, Harm W J and Assendelft, Willem J J and van der Meer, Klaas and Verhaak, Peter and Wensing, Michel and de Graaf, Ron and Hoogendijk, Witte J. and Ormel, Johan and van Dyck, Richard and {NESDA Research Consortium}},
+  doi = {10.1002/mpr.256},
+  issn = {1049-8931},
+  journal = {International journal of methods in psychiatric research},
+  month = {sep},
+  number = {3},
+  pages = {121--40},
+  pmid = {18763692},
+  title = {{The Netherlands Study of Depression and Anxiety (NESDA): rationale, objectives and methods.}},
+  url = {http://doi.wiley.com/10.1002/mpr.256 http://www.ncbi.nlm.nih.gov/pubmed/18763692},
+  volume = {17},
+  year = {2008}
 }
 
 
@@ -762,6 +727,23 @@ year = {2008}
   pmid     = {17371121},
   url      = {http://www.ncbi.nlm.nih.gov/pubmed/17371121 http://doi.apa.org/getdoi.cfm?doi=10.1037/1040-3590.19.1.25},
 }
+
+
+@book{Pinheiro2000,
+  author = {Pinheiro, Jose C and Bates, Douglas M},
+  publisher = {Springer Verlag},
+  location = {New York},
+  doi = {10.1198/tech.2001.s574},
+  eprint = {9809069v1},
+  isbn = {1441903178},
+  issn = {00401706},
+  pmid = {223064},
+  primaryClass = {arXiv:gr-qc},
+  title = {{Mixed effects models in S and S-Plus}},
+  year = {2000}
+}
+
+
 
 @Article{Posner2005,
   author  = {Posner, J and Russell, J A and Peterson, B S},
@@ -1007,15 +989,15 @@ year = {2008}
 }
 
 @article{Rijsbergen2012,
-author = {Rijsbergen, Gerard D Van and Bockting, Claudi L H and Berking, Matthias and Koeter, Maarten W J and Schene, Aart H},
-doi = {10.1371/journal.pone.0046796},
-file = {:Users/lckooistra/Google Drive/New Literature/Mendeley/journal.pone.0046796.PDF:PDF},
-number = {10},
-pages = {1--5},
-pmid = {23056456},
-title = {{Can a One-Item Mood Scale Do the Trick ? Predicting Relapse over 5 . 5-Years in Recurrent Depression}},
-volume = {7},
-year = {2012}
+  author = {Rijsbergen, Gerard D Van and Bockting, Claudi L H and Berking, Matthias and   Koeter, Maarten W J and Schene, Aart H},
+  doi = {10.1371/journal.pone.0046796},
+  journal = {Plos One},
+  number = {10},
+  pages = {1--5},
+  pmid = {23056456},
+  title = {{Can a One-Item Mood Scale Do the Trick? Predicting Relapse over 5-Years in Recurrent Depression}},
+  volume = {7},
+  year = {2012}
 }
 
 
@@ -1061,15 +1043,15 @@ year = {2012}
 }
 
 @article{Watson1988,
-abstract = {In recent studies of the structure of affect, positive and negative affect have consistently emerged as two dominant and relatively independent dimensions. A number of mood scales have been created to measure these factors; however, many existing measures are inadequate, showing low reliability or poor convergent or discriminant validity. To fill the need for reliable and valid Positive Affect and Negative Affect scales that are also brief and easy to administer, we developed two 10-item mood scales that comprise the Positive and Negative Affect Schedule (PANAS). The scales are shown to be highly internally consistent, largely uncorrelated, and stable at appropriate levels over a 2-month time period. Normative data and factorial and external evidence of convergent and discriminant validity for the scales are also presented.},
-author = {Watson, David and Clark, Lee Anna and Tellegen, A},
-file = {:Users/lckooistra/Google Drive/New Literature/Mendeley/PANAS.20items.pdf:pdf},
-number = {6},
-pages = {1063--1070},
-pmid = {3397865},
-title = {{Development and Validation of Brief Measures of Positive and Negative Affect : The PANAS Scales}},
-volume = {54},
-year = {1988}
+  author = {Watson, David and Clark, Lee Anna and Tellegen, A},
+  number = {6},
+  pages = {1063--1070},
+  pmid = {3397865},
+  journal = {Journal of Personality and Social Psychology},
+  title = {{Development and Validation of Brief Measures of Positive and Negative Affect :   The PANAS Scales}},
+  doi = {10.1037/0022-3514.54.6.1063},
+  volume = {54},
+  year = {1988}
 }
 
 
@@ -1099,9 +1081,12 @@ year = {1988}
 }
 
 @book{Watson1999,
-  author = {Watson, David},
+  author = {Watson, David and Clark, Lee Anna},
   title = {{The PANAS-X : Manual for the Positive and Negative Affect Schedule - Expanded Form}},
-  year = {1999}
+  publisher = {University of Iowa},
+  location = {Iowa},
+  url = {https://pdfs.semanticscholar.org/9e15/83dd26e0741e2bf74112405e97d948170128.pdf},
+  year = {1994}
 }
 
 @Article{Wenze2010,
