--- a/index.Rmd
+++ b/index.Rmd
@@ -15,15 +15,15 @@ researchers who are considering Ecological Momentary Assessment (EMA) studies."
 
 # Preface {-}
 
-Given known limitations of retrospective self-report questionnaires, such as recall bias and poor generalisability of assessment results to real-life situations, mental health researchers increasingly adopt alternative assessment tools. One of the promising alternatives is Ecological Momentary Assessment (EMA), in which emotions and behaviours are repeatedly sampled in everyday life, through wearable electronic devices. By providing detailed data on within-person processes, EMA may be the key in the development of personalised health interventions.
+Given known limitations of retrospective self-report questionnaires, such as recall bias and poor generalisability of assessment results to real-life situations, mental health researchers increasingly adopt alternative assessment methods. One of the promising alternatives is Ecological Momentary Assessment (EMA), in which emotions and behaviours are repeatedly sampled in everyday life, through wearable electronic devices. 
 
-EMA studies are challenging. Researchers, who are new to the field, face a dazzling array of options related to the electronic wearables, outcomes selection, study design considerations, ethical and regulatory constraints, data management, statistical analysis, and study reporting. Although standards are emerging, clear guidelines for EMA research do not - at present - exist.
+Conducting an EMA study can be a challenge. Researchers, who are new to the field, face a dazzling array of options related to the electronic wearables, outcomes selection, study design considerations, ethical and regulatory constraints, data management, statistical analysis, and study reporting. Although standards are emerging, clear guidelines for EMA research do not - at present - exist.
 
 This research manual provides a practical introduction to EMA-research. It was written for the Amsterdam School of Public Health (APH), to aid beginning researchers looking for practical advice in conducting EMA studies. It provides an overview of EMA instruments, outcomes, methods and analytical techniques, guidelines for EMA-studies, and a catalogue of EMA research in the APH consortium.
 
 The manual comprises six parts:
 
-- Part I introduces EMA and R. Chapter 1 defines EMA, and discusses the opportunities and challenges of EMA research. Chapter 2 introduces R, which, as the manual aims to show, is an indespensable tool for the EMA researcher.
+- Part I introduces EMA and R. Chapter 1 defines EMA, and discusses the opportunities and some of the challenges of EMA research. Chapter 2 introduces R, which, as this manual aims to show, is an indespensable tool for the EMA researcher.
 
 - Part II focuses on EMA study design (chapter 3), EMA instruments (chapter 4) and EMA data management (Chapter 5).
 
