--- a/book.bib
+++ b/book.bib
@@ -1158,6 +1158,13 @@ year = {1999}
 }
 
 
+@book{wilkinson2006,
+  title={The grammar of graphics},
+  author={Wilkinson, Leland},
+  year={2006},
+  publisher={Springer Science \& Business Media}
+}
+
 
 @Book{xie2015,
   title     = {Dynamic Documents with {R} and knitr},
