add refs summaries

--- a/book.bib
+++ b/book.bib
@@ -425,53 +425,21 @@ publisher = "Hogrefe & Huber",
 }
 
 @article{Goertz2018,
-457
- 
 abstract = {INTRODUCTION Fatigue is the second most common symptom in patients with chronic obstructive pulmonary disease (COPD). Despite its high prevalence, fatigue is often ignored in daily practice. For this reason, little is known about the underlying determinants of fatigue in patients with COPD. The primary objectives of this study are to chart the course of fatigue in patients with COPD, to identify the physical, systemic, psychological and behavioural factors that precipitate and perpetuate fatigue in patients with COPD, to evaluate the impact of exacerbation-related hospitalisations on fatigue and to better understand the association between fatigue and 2-year all-cause hospitalisation and mortality in patients with COPD. The secondary aim is to identify diurnal differences in fatigue by using ecological momentary assessment (EMA). This manuscript describes the protocol of the FAntasTIGUE study and gives an overview of the possible strengths, weaknesses and clinical implications. METHODS AND ANALYSIS A 2-year longitudinal, observational study, enrolling 400 patients with clinically stable COPD has been designed. Fatigue, the primary outcome, will be measured by the subjective fatigue subscale of the Checklist Individual Strength (CIS-Fatigue). The secondary outcome is the day-to-day/diurnal fatigue, registered in a subsample (n=60) by EMA. CIS-Fatigue and EMA will be evaluated at baseline, and at 4, 8 and 12 months. The precipitating and perpetuating factors of fatigue (physical, psychological, behavioural and systemic) will be assessed at baseline and at 12 months. Additional assessments will be conducted following hospitalisation due to an exacerbation of COPD that occurs between baseline and 12 months. Finally, at 18 and 24 months the participants will be followed up on their fatigue, number of exacerbations, exacerbation-related hospitalisation and survival. ETHICS AND DISSEMINATION This protocol was approved by the Medical research Ethics Committees United, Nieuwegein, the Netherlands (NL60484.100.17). TRIAL REGISTRATION NUMBER NTR6933; Pre-results.},
-458
- 
 author = {Go{\"{e}}rtz, Yvonne M J and Looijmans, Milou and Prins, Judith B and Janssen, Daisy J A and Thong, Melissa S Y and Peters, Jeannette B and Burtin, Chris and Meertens-Kerris, Yvonne and Coors, Arnold and Muris, Jean W M and Sprangers, Mirjam A G and Wouters, Emiel F M and Vercoulen, Jan H and Spruit, Martijn A},
-459
- 
 doi = {10.1136/bmjopen-2018-021745},
-460
- 
 file = {:Users/lckooistra/Google Drive/New Literature/Mendeley/Go{\"{e}}rtz{\_}2018.pdf:pdf},
-461
- 
 isbn = {2018021745},
-462
- 
 issn = {2044-6055},
-463
- 
 journal = {BMJ Open},
-464
- 
 keywords = {chronic obstructive pulmonary disease,fatigue,underlying factors},
-465
- 
 number = {4},
-466
- 
 pages = {e021745},
-467
- 
 pmid = {29643168},
-468
- 
 title = {{Fatigue in patients with chronic obstructive pulmonary disease: protocol of the Dutch multicentre, longitudinal, observational {\textless}i{\textgreater}FAntasTIGUE{\textless}/i{\textgreater} study}},
-469
- 
 url = {http://www.ncbi.nlm.nih.gov/pubmed/29643168{\%}0Ahttp://www.pubmedcentral.nih.gov/articlerender.fcgi?artid=PMC5898336{\%}0Ahttp://bmjopen.bmj.com/lookup/doi/10.1136/bmjopen-2018-021745},
-470
- 
 volume = {8},
-471
- 
 year = {2018}
-472
- 
 }
 
 @Article{Green2016,
@@ -545,6 +513,17 @@ year = {2018}
   url = {http://doi.apa.org/getdoi.cfm?doi=10.1037/0022-006X.59.1.12},
   volume = {59},
   year = {1991}
+}
+
+@article{jongeneel2018,
+  title={Reducing distress and improving social functioning in daily life in people with auditory verbal hallucinations: study protocol for the ‘Temstem’randomised controlled trial},
+  author={Jongeneel, Alyssa and Scheffers, Dorien and Tromp, Nynke and Nuij, Chani and Delespaul, Philippe and Riper, Heleen and Van Der Gaag, Mark and van den Berg, David},
+  journal={BMJ open},
+  volume={8},
+  number={3},
+  pages={e020537},
+  year={2018},
+  publisher={British Medical Journal Publishing Group}
 }
 
 
@@ -763,6 +742,16 @@ year = {2008}
   url      = {http://www.ncbi.nlm.nih.gov/pubmed/17371121 http://doi.apa.org/getdoi.cfm?doi=10.1037/1040-3590.19.1.25},
 }
 
+@article{Pinheiro2000,
+  title={Linear mixed-effects models: basic concepts and examples},
+  author={Pinheiro, Jos{\'e} C and Bates, Douglas M},
+  journal={Mixed-effects models in S and S-Plus},
+  pages={3--56},
+  year={2000},
+  publisher={Springer}
+}
+
+
 @Article{Posner2005,
   author  = {Posner, J and Russell, J A and Peterson, B S},
   title   = {{The circumplex model of affect: An integrative approach to affective neuroscience, cognitive development, and psychopathology}},
@@ -775,6 +764,17 @@ year = {2008}
   doi     = {http://dx.doi.org/10.1017/S0954579405050340},
   isbn    = {1469-2198},
   pmid    = {16262989},
+}
+
+@article{pot2016,
+  title={Effect of virtual reality exposure therapy on social participation in people with a psychotic disorder (VRETp): study protocol for a randomized controlled trial},
+  author={Pot-Kolder, Roos and Veling, Wim and Geraets, Chris and van der Gaag, Mark},
+  journal={Trials},
+  volume={17},
+  number={1},
+  pages={25},
+  year={2016},
+  publisher={BioMed Central}
 }
 
 @Article{ruf1999,
