add lomb1976 and vanheest

--- a/book.bib
+++ b/book.bib
@@ -586,6 +586,22 @@ publisher = "Hogrefe & Huber",
   keywords  = {experience sampling},
 }
 
+@article{Lomb1976,
+  archivePrefix = {arXiv},
+  arxivId = {arXiv:1011.1669v3},
+  author = {Lomb, N. R.},
+  doi = {10.1007/BF00648343},
+  eprint = {arXiv:1011.1669v3},
+  isbn = {0004-640X},
+  issn = {0004640X},
+  journal = {Astrophysics and Space Science},
+  pmid = {15003161},
+  title = {{Least-squares frequency analysis of unequally spaced data}},
+  year = {1976}
+}
+
+
+
 @Article{Marszalek2014,
   author  = {Marszalek, Jolanta and Morgulec-Adamowicz, Natalia and Rutkowska, Izabela and Kosmol, Andrzej and Marszalek, Jolanta and Morgulec-Adamowicz, Natalia and Rutkowska, Izabela and Kosmol, Andrzej},
   title   = {{Using Ecological Momentary Assessment to Evaluate Current Physical Activity, Using Ecological Momentary Assessment to Evaluate Current Physical Activity}},
@@ -999,6 +1015,31 @@ year = {1999}
   volume = {7},
   year = {2012}
 }
+
+@article{VanHeest2014,
+  title = {Autocalibration of accelerometer data for free-living physical activity assessment using local gravity and temperature: an evaluation on four continents},
+  author = {Vincent T {van Hees} and Zhou Fang and Joss Langford and Felix Assah and A MohammadMirkes and Inacio C {da Silva} and Michael I Trenell and Tom White and Nicholas J Wareham and Soren Brage},
+  doi = {10.1152/japplphysiol.00421.2014},
+  journal = {Journal of Applied Physiology},
+  volume = {117},
+  number = {7},
+  pages = {738--744},
+  year = {2014},
+  url = {https://www.physiology.org/doi/10.1152/japplphysiol.00421.2014},
+}
+
+@article{VanHeest2015,
+  title = {A Novel, Open Access Method to Assess Sleep Duration Using a Wrist-Worn Accelerometer},
+  author = {Vincent T {van Hees} and Severine Sabia and Kirstie N Anderson and Sarah J Denton and James Oliver and Michael Catt and Jesica G Abell and Mika Kivimaki and Michael I Trenell and Archana Singh-Manoux},
+  doi = {10.1371/journal.pone.0142533},
+  journal = {PLoS One},
+  volume = {10},
+  number = {11},
+  year = {2015},
+  url = {http://journals.plos.org/plosone/article?id=10.1371/journal.pone.0142533},
+}
+
+
 
 
 @Article{VanRijsbergen2014,
