add some packages

--- a/packages.bib
+++ b/packages.bib
@@ -27,6 +27,23 @@
     url = {https://github.com/rstudio/bookdown},
 }
 
+@Manual{R-dplyr,
+  title = {dplyr: A Grammar of Data Manipulation},
+  author = {Hadley Wickham and Romain François and Lionel Henry and Kirill Müller},
+  year = {2018},
+  note = {R package version 0.7.6},
+  url = {https://CRAN.R-project.org/package=dplyr},
+}
+
+@Manual{R-GGIR,
+  title = {{GGIR}: Raw Accelerometer Data Analysis},
+  author = {Vincent T {van Hees} and Zhou Fang and Jing Hua Zhao and Joe Heywood and Evgeny Mirkes and Severine Sabia and Jairo H Migueles},
+  year = {2018},
+  note = {R package version 1.5-24},
+  doi = {10.5281/zenodo.1051064},
+  url = {https://CRAN.R-project.org/package=GGIR},
+}
+
 @Manual{R-graphicalVAR,
   title = {graphicalVAR: Graphical VAR for Experience Sampling Data},
   author = {Sacha Epskamp},
@@ -49,6 +66,14 @@
   year = {2018},
   note = {R package version 3.1-137},
   url = {https://CRAN.R-project.org/package=nlme},
+}
+
+@Manual{R-PhysicalActivity,
+    title = {PhysicalActivity: Process Accelerometer Data for Physical Activity Measurement},
+    author = {Leena Choi and Cole Beck and Zhouwen Liu and Charles E. Matthews and Maciej S. Buchowski},
+    year = {2018},
+    note = {R package version 0.2-2},
+    url = {https://CRAN.R-project.org/package=PhysicalActivity},
 }
 
 @Manual{R-powerlmm,
