--- a/part4/11_activity.Rmd
+++ b/part4/11_activity.Rmd
@@ -26,7 +26,7 @@ sem tellus hendrerit mi, eget pulvinar massa nisl ac dolor. Nunc ac tellus nec
 tortor interdum porta. Vestibulum hendrerit tempus condimentum. Donec a mollis
 sem. Aenean lectus nunc, bibendum ut orci vel, tristique pellentesque arcu.
 Vestibulum id laoreet neque. Phasellus at ex velit. Vestibulum scelerisque nulla
-ut massa tempor, ac dapibus dui viverra.
+ut massa tempor, ac dapibus dui viverra [@VanHeest2014, @VanHeest2015].
 
 Donec sed lectus at sem ultrices commodo. Proin a viverra metus, nec scelerisque
 odio. Morbi viverra tristique libero vel fringilla. Sed at varius erat, id
@@ -37,22 +37,6 @@ malesuada fames ac turpis egestas. Vivamus enim turpis, pulvinar volutpat
 purus nec, lobortis imperdiet diam. Donec sed lectus at sem ultrices commodo.
 Proin a viverra metus, nec scelerisque odio. Morbi viverra tristique libero vel
 fringilla. Sed at varius erat, id consequat nibh.
-
-
-```{r fig11a, fig.cap="Three days of Accelerometer data."}
-library(PhysicalActivity)
-data(dataSec)
-
-d <- dataCollapser(dataSec, TS = "TimeStamp", col = "counts", by = 60)
-
-ggplot(d, aes(x = as.POSIXct(TimeStamp), y = counts)) +
-  geom_smooth(method = "loess", span = .05, se = FALSE) + 
-  geom_point(size = .2, alpha = .25) + 
-  scale_x_datetime() +
-  scale_y_sqrt(breaks = c(100, 1000, 3000, 6000, 9000)) +  
-  xlab("Time") + ylab("Activity")
-```
-
 
 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam vehicula augue
 metus, in tincidunt urna luctus sit amet. Sed ultrices, erat at laoreet semper,
